--- a/Modules/javascript-racecar/public/rcleft.html
+++ b/Modules/javascript-racecar/public/rcleft.html
@@ -45,15 +45,17 @@
           <legend>Select likelihood</legend>
           <input type="radio" id="visibilities" name="likelihood" />
           <label for="visibilities">Visibilities</label>
+
           <input type="radio" id="beliefs" name="likelihood" checked />
           <label for="beliefs">Belief State</label>
+
           <input type="radio" id="unseen_risk" name="likelihood" />
           <label for="unseen_risk">Unseen</label>
-          <input type="radio" id="brake_rates" name="likelihood" />
+
+          <input type="radio" id="reaction_likelihood" name="likelihood" />
           <label for="brake_rates">Brake Rate</label>
-          <input type="radio" id="valid" name="likelihood" />
-          <label for="valid">Valid</label>
-          <input type="radio" id="total_risk" name="likelihood" />
+
+          <input type="radio" id="conditioned_risk" name="likelihood" />
           <label for="total_risk">Total Risk</label>
         </fieldset>
       </form>
