--- a/Modules/javascript-racecar/public/rcleft.html
+++ b/Modules/javascript-racecar/public/rcleft.html
@@ -59,8 +59,8 @@
           <label for="total_risk">Total Risk</label>
         </fieldset>
       </form>
-      <button id="go" type="button">Go</button>
-      <button id="stop" type="button">Stop</button>
+      <!-- <button id="go" type="button">Go</button>
+      <button id="stop" type="button">Stop</button> -->
       <div id="info"></div>
       <div id="three"></div>
     </div>
