--- a/Modules/javascript-racecar/public/cameras.html
+++ b/Modules/javascript-racecar/public/cameras.html
@@ -15,9 +15,9 @@
 			<td><h3>Camera</h3></td>
 		</tr>
 		<tr>
-			<td><img id='camera1'/></td>
-			<td><img id='camera2'/></td>
-			<td><img id='camera3'/></td>
+			<td><img id='video1'/></td>
+			<td><img id='video2'/></td>
+			<td><img id='video3'/></td>
 		</tr>
 	</table>
 
