--- a/Modules/javascript-racecar/public/cameras.html
+++ b/Modules/javascript-racecar/public/cameras.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang=”en”>
+<html lang="en">
 <head>
-<meta charset=”UTF-8″>
+<meta charset="UTF-8">
 <title>SUR</title>
 <link rel="stylesheet" type="text/css" href="app.css" media="screen" />
 <script type="application/javascript" src="/msgpack5.min.js"></script>
