--- a/Modules/javascript-racecar/public/cameras.html
+++ b/Modules/javascript-racecar/public/cameras.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>SUR</title>
-<link rel="stylesheet" type="text/css" href="app.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="cameras.css" media="screen" />
 <script type="application/javascript" src="/msgpack5.min.js"></script>
 <script type="application/javascript" src="/cameras.js"></script>
 </head>
