--- a/Modules/javascript-racecar/public/rcleft.html
+++ b/Modules/javascript-racecar/public/rcleft.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="row">
-    <div class="column">
+    <div id="left" class="column">
       <!--  width="576" height="720" -->
       <svg id="environment" viewBox="-3 -6 8 10">
         <!-- preserveAspectRatio="xMidYMid meet" -->
@@ -39,6 +39,13 @@
       <canvas id="stage"></canvas>
     </div>
     <div id="right" class="column">
+      <table>
+        <tr>
+          <td><img id='video1'/></td>
+          <td><img id='video2'/></td>
+          <td><img id='video3'/></td>
+        </tr>
+      </table>
       <div id="graph"></div>
       <form id="likelihoodSelection" name="likelihoodSelection">
         <fieldset>
